--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="javascripts/scale.fix.js"></script>
+    <script src="javascripts/class.min.js"></script>
+    <script src="javascripts/examples.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
     <!--[if lt IE 9]>
@@ -38,7 +40,10 @@ Features:</p>
 <li>isA operator</li>
 <li>statics/constans</li>
 <li>mixins</li>
-</ul><h1>
+</ul>
+<strong>Open your javascript console to see the examples</strong>
+
+          <h1>
 <a name="example-class-declaration" class="anchor" href="#example-class-declaration"><span class="octicon octicon-link"></span></a>Example class declaration</h1>
 
 <p>In order to define new class, consider following example</p>
