Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
       <header>
         <h1>js.class</h1>
         <p>Javascript OOP library</p>
-        <p class="view"><a href="https://github.com/dkraczkowski/js.class">View the Project on GitHub <small>dkraczkowski/js.class</small></a></p>
+        <p class="view"><a href="https://github.com/dkraczkowski/class.js">View the Project on GitHub <small>dkraczkowski/class.js</small></a></p>
         <ul>
-          <li><a href="https://github.com/dkraczkowski/js.class/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/dkraczkowski/js.class/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/dkraczkowski/js.class">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/dkraczkowski/class.js/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/dkraczkowski/class.js/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/dkraczkowski/class.js">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
         <h1>
-<a name="jsclass" class="anchor" href="#jsclass"><span class="octicon octicon-link"></span></a>js.class</h1>
+<a name="classjs" class="anchor" href="#classjs"><span class="octicon octicon-link"></span></a>class.js</h1>
 
-<p>js.class is a library which focuses on simplifying OOP in javascript.</p>
+<p>class.js is a library which focuses on simplifying OOP in javascript.</p>
 
 <h3>
 <a name="features" class="anchor" href="#features"><span class="octicon octicon-link"></span></a>Features:</h3>
