Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>js.class by dkraczkowski</title>
+    <title>Class.js by dkraczkowski</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -17,7 +17,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>js.class</h1>
+        <h1>Class.js</h1>
         <p>Javascript OOP library</p>
         <p class="view"><a href="https://github.com/dkraczkowski/class.js">View the Project on GitHub <small>dkraczkowski/class.js</small></a></p>
         <ul>
@@ -28,7 +28,8 @@
       </header>
       <section>
         <h1>
-<a name="classjs" class="anchor" href="#classjs"><span class="octicon octicon-link"></span></a>class.js</h1>
+<a name="classjs-" class="anchor" href="#classjs-"><span class="octicon octicon-link"></span></a>class.js <a href="https://travis-ci.org/dkraczkowski/class.js"><img src="https://travis-ci.org/dkraczkowski/class.js.svg?branch=master" alt="Build Status"></a>
+</h1>
 
 <p>class.js is a library which focuses on simplifying OOP in javascript.</p>
 
